--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -10,7 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.imicryakov.projects.ecm-sandbox</groupId>
-    <artifactId>core</artifactId>
+    <artifactId>cli</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>ru.imicryakov.projects.ecm-sandbox</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
