--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,4 +13,12 @@
     <artifactId>core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>ru.imicryakov.projects.ecm-sandbox</groupId>
+            <artifactId>config</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
