--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>config</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.23.1</version>
+        </dependency>
     </dependencies>
 
 </project>
